Fix an alignment issue in delegateList table titles in M screen

--- a/src/components/delegateList/delegateList.css
+++ b/src/components/delegateList/delegateList.css
@@ -18,6 +18,8 @@
   --main-header-font-size-XL: 32px;
   --main-header-font-size-L: 28px;
   --main-header-font-size-XS: 24px;
+  --tabel-header-padding-m: 27px;
+  --tabel-header-padding-s: 19px;
   --grid-padding-L: 24px;
   --grid-padding-XS: 19px;
   --list-line-height: 25px;
@@ -387,6 +389,8 @@
         z-index: 2;
         background: var(--color-white);
         box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.5);
+        padding-left: var(--tabel-header-padding-m);
+        padding-right: var(--tabel-header-padding-m);
 
         & li {
           padding-bottom: 0;
@@ -467,6 +471,8 @@
 @media (--small-viewport) {
   .header.offCanvas ~ .delegatesList .table .tableHead {
     top: var(--header-height-s);
+    padding-left: var(--tabel-header-padding-s);
+    padding-right: var(--tabel-header-padding-s);
   }
 }
 
